<resources>
  <string name="app_name">UniTechNet</string>
  <string name="empty_string"> </string>
  <string name="email_hint">Email</string>
  <string name="password_hint">Password</string>
  <string name="sign_in_button_text">Sign In</string>
  <string name="sign_in_info">*Sign in with the email provided by your university</string>
  <string name="edit_text_empty_error">This field cannot be empty</string>
  <string name="invalid_email_error">The email address is not valid</string>
  <string name="incorrect_email_or_password">Incorrect email or password</string>
  <string name="passwords_not_match">Passwords do not match</string>
  <string name="title_activity_navigation">NavigationActivity</string>
  <string name="title_courses">Courses</string>
  <string name="title_feed">Feed</string>
  <string name="title_notifications">Notifications</string>
  <string name="title_messages">Messages</string>
  <string name="title_profile">Profile</string>
  <string name="change_profile_picture"><u>Change profile picture</u></string>
  <string name="first_name">First name</string>
  <string name="last_name">Last Name</string>
  <string name="username">Username</string>
  <string name="birthday">Birthday</string>
  <string name="save">save</string>
  <string name="name_profile_placeholder">Gjorgji\n     Markov</string>
  <string name="title_profile_fragment">Title</string>
  <string name="username_profile_placeholder">gjorgjim</string>
  <string name="birthday_profile_placeholder">11/12/1995</string>
  <string name="courses_profile">Courses</string>
  <string name="experience_profile">Experience</string>
  <string name="education_profile">Education</string>
  <string name="title_profile_list_placeholder">Software Engineer</string>
  <string name="date_profile_placeholder">Jun 2017 - present</string>
  <string name="description_profile_placeholder">Netcetera</string>
  <string name="school_hint">School</string>
  <string name="title_hint">Title</string>
  <string name="company_hint">Company</string>
  <string name="startdate_hint">Start Date</string>
  <string name="end_date_hint">End Date</string>
  <string name="present_label">present</string>
  <string name="add_button">Add</string>
  <string name="degree_hint">Degree</string>
  <string name="grade_hint">Grade</string>
  <string name="save_button">Save</string>
  <string name="delete_button">Delete</string>
  <string name="edit_your_details">Edit your details</string>
  <string name="add_education">Add Education</string>
  <string name="add_experience">Add Experience</string>
  <string name="edit_experience_dialog_title">Edit Experience</string>
  <string name="edit_education_dialog_title">Edit Education</string>
  <string name="calculus_placeholder">Calculus</string>
  <string name="course_description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras congue semper sapien et facilisis. Suspendisse non pharetra leo. In hac habitasse platea dictumst. Quisque metus nisl, fringilla id semper sit amet, gravida fermentum purus. Donec sed tellus interdum nisi molestie blandit at tristique dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin tellus ex, ultrices id enim sed, dignissim rutrum diam. Donec sed purus metus.</string>
  <string name="subscribe_button">Subscribe</string>
  <string name="unsubscribe_button">Unsubscribe</string>
  <string name="subscribed_placeholder">subscribed</string>
  <string name="subscribed_users_placeholder">Subscribed users:</string>
  <string name="solved_problems_placeholder">Problems:</string>
  <string name="username_msg_placeholder">Kristina Aleksieska</string>
  <string name="last_message_placeholder">Koga ke diplomirame?</string>
  <string name="last_message_time_placeholder">08.08 12:17</string>
  <string name="user_name_placeholder">Kristina Aleksieska</string>
  <string name="you_last_message">You</string>
  <string name="today_text_view">Today</string>
  <string name="channel_name">Notification Channel</string>
  <string name="channel_description">Channel for message notifications</string>
  <string name="edit_profile_placeholder">Edit Profile</string>
  <string name="problem_name_placeholder">Omitting the second expression when using the if-else shorthand</string>
  <string name="problem_description_placeholder">Can I write the \'if else\' shorthand without the else? var x=1; x==2 ? dosomething() : doNothingButContinueCode(); I\'ve noticed putting null for the else works (but I have no idea why or if that\'s a good idea).</string>
  <string name="problem_author_placeholder">Posted by:</string>
  <string name="problem_date_placeholder">06.08.2018</string>
  <string name="solved_problems">Problems:</string>
  <string name="answers">Answers:</string>
  <string name="no_answers">There are not answers yet.</string>
  <string name="mark_as_read">Mark as read</string>
  <string name="empty_solved_problems">There are no solved problems.</string>
  <string name="empty_unsolved_problems">There are no unsolved problems.</string>
  <string name="hide_problems">Subscribe to course, to see and answer the problems.</string>
  <string name="forgot_password">Forgot password</string>
  <string name="forgot_password_underlined"><u>Forgot password</u></string>
  <string name="change_password">Change password</string>
  <string name="change_password_underlined"><u>Change password</u></string>
  <string name="old_password_hint">Old password</string>
  <string name="new_password_hint">New password</string>
  <string name="repeat_password_hint">Repeat password</string>
  <string name="forgot_password_description">Please enter your email address, and we will sent a password reset email.</string>
  <string name="send_email">Send Email</string>
  <string name="sending_email">Sending email...</string>
  <string name="changing_password">Changing password...</string>
  <string name="email_sent_success">Email with instructions to reset password has been sent to your email address.</string>
  <string name="try_again">Please try again.</string>
  <string name="password_changed">Your password was successfully changed.</string>
  <string name="not_answered">Not answered</string>
  <string name="answered">Answered</string>
  <string name="mark_as_answer">Mark as answer</string>
  <string name="post_answer">Post answer</string>
  <string name="answer_post_dialog">Answer..</string>
  <string name="post">Post</string>
  <string name="answer">Answer</string>
  <string name="post_problem">Post problem</string>
  <string name="problem_name_hint">Problem name</string>
  <string name="problem_description_hint">Description</string>
  <string name="new_problem_notification">New problem has been posted in a course you are subscribed to.</string>
  <string name="new_answer_notification">New answer has been posted in one of your problems.</string>
  <string name="course">Course:</string>
  <string name="course_title_placeholder">Calculus 1</string>

  <string-array name="gender_array">
    <item>Not Specified</item>
    <item>Male</item>
    <item>Female</item>
  </string-array>

</resources>
