<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
  android:padding="16dp">

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/dialogTitleTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:text="@string/edit_your_details"
    style="@style/PrimaryTextStyle"
    android:textColor="@color/colorPrimary"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/firstNameIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/dialogTitleTv">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/firstNameEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/first_name"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
  android:id="@+id/lastNameIl"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingTop="8dp"
  android:layout_centerHorizontal="true"
  android:layout_below="@id/firstNameIl">

  <android.support.v7.widget.AppCompatEditText
    android:id="@+id/lastNameEt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:backgroundTint="@color/colorPrimary"
    style="@style/EditTextPrimaryStyle"
    android:hint="@string/last_name"/>

</android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
  android:id="@+id/titleIl"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingTop="8dp"
  android:layout_centerHorizontal="true"
  android:layout_below="@id/lastNameIl">

  <android.support.v7.widget.AppCompatEditText
    android:id="@+id/titleEt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:backgroundTint="@color/colorPrimary"
    style="@style/EditTextPrimaryStyle"
    android:hint="@string/title_hint"/>

</android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/usernameIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/titleIl">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/usernameEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/username"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/birthdayIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/usernameIl">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/birthdayEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/birthday"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/saveChangesBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/birthdayIl"
    android:text="@string/save_button"
    android:background="@color/colorPrimary"
    style="@style/ButtonPrimaryTextStyle"/>

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/changePwTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/saveChangesBtn"
    android:layout_marginTop="16dp"
    style="@style/SecondaryTextStyle"
    android:textColor="@color/colorPrimary"
    android:text="@string/change_password_underlined"/>

</RelativeLayout>