<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/dialogTitleTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:text="@string/edit_experience_dialog_title"
    style="@style/PrimaryTextStyle"
    android:textColor="@color/colorPrimary"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/titleIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/dialogTitleTv">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/titleEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/title_hint"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/companyIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/titleIl">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/companyEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/company_hint"/>

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/startDateIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/companyIl">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/startDateyEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="10"
      android:focusable="false"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/startdate_hint"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/endDateIl"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:layout_alignParentStart="true"
    android:layout_marginStart="32dp"
    android:layout_below="@id/startDateIl">

    <android.support.v7.widget.AppCompatEditText
      android:id="@+id/endDateyEt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:ems="5"
      android:focusable="false"
      android:backgroundTint="@color/colorPrimary"
      style="@style/EditTextPrimaryStyle"
      android:hint="@string/end_date_hint"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.v7.widget.AppCompatCheckBox
    android:id="@+id/endDatePresentCb"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@id/endDateIl"
    android:layout_below="@id/startDateIl"
    android:layout_marginTop="24dp"
    android:checked="false"/>

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/checkBoxLabelTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@id/endDatePresentCb"
    android:layout_below="@id/startDateIl"
    android:layout_marginTop="28dp"
    android:text="@string/present_label"
    style="@style/PrimaryTextStyle"/>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/addExperienceBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/endDateIl"
    android:layout_marginTop="16dp"
    android:text="@string/save_button"
    android:background="@color/colorAccent"
    style="@style/ButtonPrimaryTextStyle"/>

  <android.support.v7.widget.AppCompatButton
    android:id="@+id/deleteExperienceBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/addExperienceBtn"
    android:layout_marginTop="16dp"
    android:text="@string/delete_button"
    android:background="@color/colorAccent"
    style="@style/ButtonPrimaryTextStyle"/>

</RelativeLayout>