<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:padding="8dp">

  <android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/ef_white"
      card_view:cardCornerRadius="2dp"
      card_view:cardElevation="2dp"
      android:padding="4dp">

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/problemNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/PrimaryTextStyle"
        android:layout_marginTop="4dp"
        android:text="@string/problem_name_placeholder"
        android:textAlignment="center"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/problemDescriptionTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/problemNameTv"
        android:layout_centerHorizontal="true"
        style="@style/SecondaryTextStyle"
        android:layout_marginTop="8dp"
        android:minLines="1"
        android:maxLines="3"
        android:text="@string/problem_description_placeholder"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/problemAuthorTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/problemDescriptionTv"
        android:layout_alignParentEnd="true"
        style="@style/SecondaryTextStyle"
        android:textStyle="italic"
        android:layout_marginTop="16dp"
        android:text="@string/problem_author_placeholder"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/problemDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/problemAuthorTv"
        android:layout_alignParentEnd="true"
        style="@style/SecondaryTextStyle"
        android:textStyle="italic"
        android:layout_marginTop="8dp"
        android:text="@string/problem_date_placeholder"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/courseTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/problemDescriptionTv"
        android:layout_marginTop="16dp"
        style="@style/SecondaryTextStyle"
        android:text="@string/course"/>

      <android.support.v7.widget.AppCompatTextView
        android:id="@+id/courseNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/courseTv"
        android:layout_marginTop="8dp"
        style="@style/SecondaryTextStyle"
        android:text="@string/course_title_placeholder"/>

    </RelativeLayout>

  </android.support.v7.widget.CardView>

  <View
    android:id="@+id/courseUnderline"
    android:background="@color/colorPrimary"
    android:layout_height="1dp"
    android:layout_width="fill_parent"
    android:layout_marginTop="8dp"
    android:layout_below="@+id/cardView"/>

</RelativeLayout>