<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/titleTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:paddingTop="8dp"
    android:paddingStart="16dp"
    style="@style/PrimaryTextStyle"
    android:text="@string/title_profile_list_placeholder"/>

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/descriptionTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/titleTv"
    app:layout_constraintStart_toStartOf="parent"
    android:paddingStart="32dp"
    style="@style/SecondaryTextStyle"
    android:text="@string/description_profile_placeholder"/>

  <android.support.v7.widget.AppCompatTextView
    android:id="@+id/dateTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/titleTv"
    app:layout_constraintEnd_toEndOf="parent"
    android:paddingEnd="8dp"
    style="@style/SecondaryTextStyle"
    android:text="@string/date_profile_placeholder"/>

</android.support.constraint.ConstraintLayout>